--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,10 @@
 *{
   margin: 0;
   padding: 0;
-  
+  font-family: Arial, Helvetica, sans-serif;
 }
-body {
-  background: linear-gradient(black purple);
-}
-.party-list {
-   background: linear-gradient(black purple);
+li {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
 }
